web/assets/main.scss
/* ... */
.page-header__inner {
  display: flex;
  align-items: stretch;
  width: 100%;
}

.panel-tabs {
  border-left: 1px solid rgb(255, 255, 255);
  color: rgb(255, 255, 255);
  float: left;
  overflow: visible;
  position: relative;
  flex: 1;
}

.panel-tabs__buttons {
  display: flex;
  height: 40px;
}

.panel-tabs__button {
  background-color: transparent;
  border: none;
  border-right: 1px solid rgb(255, 255, 255);
  color: rgb(255, 255, 255);
  cursor: pointer;
  display: block;
  font-family: opg-icons;
  font-feature-settings: "liga";
  font-size: 22.4px;
  height: 40px;
  line-height: 31px;
  min-width: 44.8px;
  padding: 4.48px;
  text-align: center;
  text-decoration: none;
  text-transform: capitalize;
  width: 44.8px;

  &:hover {
    background-color: rgba(255, 255, 255, 0.15);
  }
}

.panel-tabs__dropdown {
  background-image: linear-gradient(rgb(67, 112, 168) 0px, rgb(0, 50, 110));
  color: rgb(255, 255, 255);
  font-family: "Open Sans", sans-serif;
  left: 0;
  max-height: 626px;
  overflow: auto;
  position: absolute;
  top: 40px;
  transition: height 0.5s ease, top 0.1s ease;
  width: 1245px;
  z-index: -1;

  &[hidden] {
    display: none;
  }
}

@font-face {
  font-family: "opg-icons";
  src: url("../assets/fonts/opg-icons.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}

.panel-calendar {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  padding: 0.5rem;
  gap: 1rem;
}

.panel-calendar__months {
  display: flex;
  flex-direction: row;
  gap: 0.5rem;
  flex: 3;
}

.panel-calendar__difference {
  .govuk-input {
    color: rgb(255, 255, 255);
    background-color: transparent;
    border-color: rgb(255, 255, 255);
  }

  .govuk-label {
    color: rgb(255, 255, 255);
  }

  .govuk-fieldset__legend {
    color: rgb(255, 255, 255);
  }

  .govuk-radios__label {
    color: rgb(255, 255, 255);
    white-space: nowrap;
  }
}

.date-difference h3 {
  color: rgb(255, 255, 255);
}

.calendar-month {
  flex: 1;
  border-collapse: collapse;
  font-size: 0.75em;
  color: rgb(255, 255, 255);

  caption {
    color: rgb(255, 255, 255);
    font-weight: 600;
    margin-bottom: 0.5rem;
    text-align: center;
  }

  th {
    font-weight: 300;
    padding: 2px 6px;
    text-align: center;
    border: 1px solid rgba(255, 255, 255, 0.3);
  }

  td {
    padding: 2px 6px;
    text-align: center;
    border: 1px solid rgba(255, 255, 255, 0.3);

    &.calendar-month__day--today {
      background: rgba(255, 255, 255, 0.25);
      font-weight: 700;
    }

    &.calendar-month__day--bank-holiday {
      color: rgb(255, 165, 0);
    }

    &.calendar-month__day--empty {
      border: 1px solid rgba(255, 255, 255, 0.1);
    }
  }
}

